--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,7 @@
 <footer class="pb-16 px-4 text-center">
     <div style="font-family: 'Inter', sans-serif; font-weight: 600; padding: 1em; color: #475569;"
         class="text-[8px] uppercase tracking-[0.15em]">
-        &copy; Livingston Larus 2026, dba Daemon Engineering.
+        &copy; <a href="https://www.livingstonlarus.com/" style="color: inherit; text-decoration: underline;">Livingston
+            Larus</a> 2026, dba Daemon Engineering.
     </div>
 </footer>
